--- a/CursoWindowsForms/CursoWindowsForms.csproj
+++ b/CursoWindowsForms/CursoWindowsForms.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Curso1WindowsForms\Frm_HelloWorld.Designer.cs">
       <DependentUpon>Frm_HelloWorld.cs</DependentUpon>
     </Compile>
+    <Compile Include="Curso1WindowsForms\Frm_HelloWorld_UC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Curso1WindowsForms\Frm_HelloWorld_UC.Designer.cs">
+      <DependentUpon>Frm_HelloWorld_UC.cs</DependentUpon>
+    </Compile>
     <Compile Include="Curso1WindowsForms\Frm_Mascara.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +112,12 @@
     <Compile Include="Frm_Principal_Menu_MDI.Designer.cs">
       <DependentUpon>Frm_Principal_Menu_MDI.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_Principal_Menu_UC.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Principal_Menu_UC.Designer.cs">
+      <DependentUpon>Frm_Principal_Menu_UC.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Curso1WindowsForms\Frm_DemonstracaoKey.resx">
@@ -113,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Curso1WindowsForms\Frm_HelloWorld.resx">
       <DependentUpon>Frm_HelloWorld.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Curso1WindowsForms\Frm_HelloWorld_UC.resx">
+      <DependentUpon>Frm_HelloWorld_UC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Curso1WindowsForms\Frm_Mascara.resx">
       <DependentUpon>Frm_Mascara.cs</DependentUpon>
@@ -134,6 +149,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Principal_Menu_MDI.resx">
       <DependentUpon>Frm_Principal_Menu_MDI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_Principal_Menu_UC.resx">
+      <DependentUpon>Frm_Principal_Menu_UC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
