--- a/CursoWindowsForms/CursoWindowsForms.csproj
+++ b/CursoWindowsForms/CursoWindowsForms.csproj
@@ -73,10 +73,10 @@
     <Compile Include="Curso1WindowsForms\Frm_DemonstracaoKey.Designer.cs">
       <DependentUpon>Frm_DemonstracaoKey.cs</DependentUpon>
     </Compile>
-    <Compile Include="Curso2WindowsForms\Frm_CadastroCliente_UC.cs">
+    <Compile Include="Curso3WindowsForms\Frm_CadastroCliente_UC.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Curso2WindowsForms\Frm_CadastroCliente_UC.Designer.cs">
+    <Compile Include="Curso3WindowsForms\Frm_CadastroCliente_UC.Designer.cs">
       <DependentUpon>Frm_CadastroCliente_UC.cs</DependentUpon>
     </Compile>
     <Compile Include="Curso2WindowsForms\Frm_DemonstracaoKey_UC.cs">
@@ -145,28 +145,28 @@
     <Compile Include="Curso2WindowsForms\Frm_Login.Designer.cs">
       <DependentUpon>Frm_Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_Menu_Flutuante.cs">
+    <Compile Include="Curso3WindowsForms\Frm_Menu_Flutuante.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_Menu_Flutuante.Designer.cs">
+    <Compile Include="Curso3WindowsForms\Frm_Menu_Flutuante.Designer.cs">
       <DependentUpon>Frm_Menu_Flutuante.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_MouseCaptura.cs">
+    <Compile Include="Curso3WindowsForms\Frm_MouseCaptura.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_MouseCaptura.Designer.cs">
+    <Compile Include="Curso3WindowsForms\Frm_MouseCaptura.Designer.cs">
       <DependentUpon>Frm_MouseCaptura.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_MouseCursor.cs">
+    <Compile Include="Curso3WindowsForms\Frm_MouseCursor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_MouseCursor.Designer.cs">
+    <Compile Include="Curso3WindowsForms\Frm_MouseCursor.Designer.cs">
       <DependentUpon>Frm_MouseCursor.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_MouseEventos.cs">
+    <Compile Include="Curso3WindowsForms\Frm_MouseEventos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_MouseEventos.Designer.cs">
+    <Compile Include="Curso3WindowsForms\Frm_MouseEventos.Designer.cs">
       <DependentUpon>Frm_MouseEventos.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_Principal.cs">
@@ -216,7 +216,7 @@
     <EmbeddedResource Include="Curso1WindowsForms\Frm_DemonstracaoKey.resx">
       <DependentUpon>Frm_DemonstracaoKey.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Curso2WindowsForms\Frm_CadastroCliente_UC.resx">
+    <EmbeddedResource Include="Curso3WindowsForms\Frm_CadastroCliente_UC.resx">
       <DependentUpon>Frm_CadastroCliente_UC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Curso2WindowsForms\Frm_DemonstracaoKey_UC.resx">
@@ -252,16 +252,16 @@
     <EmbeddedResource Include="Curso2WindowsForms\Frm_Login.resx">
       <DependentUpon>Frm_Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_Menu_Flutuante.resx">
+    <EmbeddedResource Include="Curso3WindowsForms\Frm_Menu_Flutuante.resx">
       <DependentUpon>Frm_Menu_Flutuante.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_MouseCaptura.resx">
+    <EmbeddedResource Include="Curso3WindowsForms\Frm_MouseCaptura.resx">
       <DependentUpon>Frm_MouseCaptura.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_MouseCursor.resx">
+    <EmbeddedResource Include="Curso3WindowsForms\Frm_MouseCursor.resx">
       <DependentUpon>Frm_MouseCursor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_MouseEventos.resx">
+    <EmbeddedResource Include="Curso3WindowsForms\Frm_MouseEventos.resx">
       <DependentUpon>Frm_MouseEventos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Principal.resx">
