--- a/CursoWindowsFormsBiblioteca/app.config
+++ b/CursoWindowsFormsBiblioteca/app.config
@@ -6,5 +6,8 @@
         <add name="CursoWindowsFormsBiblioteca.Properties.Settings.FicharioConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Databases\Fichario.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="CursoWindowsFormsBiblioteca.Properties.Settings.ByteBankConnectionString"
+            connectionString="Data Source=DESKTOP-LNCDRN7;Initial Catalog=ByteBank;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
