--- a/CursoWindowsForms/App.config
+++ b/CursoWindowsForms/App.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<connectionStrings>
-		<add name="Fichario"
-			connectionString="Data Source=DESKTOP-LNCDRN7;Initial Catalog=ByteBank;Integrated Security=True"
-			providerName="System.Data.SqlClient" />
-	</connectionStrings>
+	<configSections>
+ </configSections>
+ <connectionStrings>
+  <add name="Fichario" connectionString="Data Source=DESKTOP-LNCDRN7;Initial Catalog=ByteBank;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+  <add name="CursoWindowsForms.Properties.Settings.ByteBankConnectionString"
+   connectionString="Data Source=DESKTOP-LNCDRN7;Initial Catalog=ByteBank;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
 	</startup>
