--- a/CursoWindowsForms/Properties/Settings.settings
+++ b/CursoWindowsForms/Properties/Settings.settings
@@ -2,13 +2,21 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CursoWindowsForms.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="ByteBankConnectionString" Type="(Connection string)" Scope="Application">
+    <Setting Name="FicharioConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
-  &lt;ConnectionString&gt;Data Source=DESKTOP-LNCDRN7;Initial Catalog=ByteBank;Integrated Security=True&lt;/ConnectionString&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\WindowsForms\Curso\CursoWindowsForms\CursoWindowsFormsBiblioteca\Databases\Fichario.mdf;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=DESKTOP-LNCDRN7;Initial Catalog=ByteBank;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\WindowsForms\Curso\CursoWindowsForms\CursoWindowsFormsBiblioteca\Databases\Fichario.mdf;Integrated Security=True</Value>
+    </Setting>
+    <Setting Name="ByteBankConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-NFOOQC1;Initial Catalog=ByteBank;Persist Security Info=True;User ID=sa;Password=8ii&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=DESKTOP-NFOOQC1;Initial Catalog=ByteBank;Persist Security Info=True;User ID=sa;Password=8ii</Value>
     </Setting>
   </Settings>
 </SettingsFile>
