--- a/CursoWindowsFormsBiblioteca/app.config
+++ b/CursoWindowsFormsBiblioteca/app.config
@@ -3,11 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="CursoWindowsFormsBiblioteca.Properties.Settings.FicharioConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Databases\Fichario.mdf;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
         <add name="CursoWindowsFormsBiblioteca.Properties.Settings.ByteBankConnectionString"
-            connectionString="Data Source=DESKTOP-LNCDRN7;Initial Catalog=ByteBank;Integrated Security=True"
+            connectionString="Data Source=DESKTOP-NFOOQC1;Initial Catalog=ByteBank;Persist Security Info=True;User ID=sa;Password=8ii"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
